--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -495,3 +495,38 @@ svg polygon {
   font-size: 19px;
   margin-bottom: 0px;
 }
+
+/* Profile Section */
+.profile-section {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.profile-picture {
+  width: 170px;
+  height: 170px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 5px solid #a070ff;
+}
+
+/* Loader */
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.custom-input {
+  border: none;
+  border-bottom: 1px solid #ccc;
+  border-radius: 0;
+  padding: 8px 5px;
+  outline: none;
+  box-shadow: none !important;
+}
+
+.custom-input:focus {
+  border-bottom: 2px solid #007bff;
+}
