--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -530,3 +530,33 @@ svg polygon {
 .custom-input:focus {
   border-bottom: 2px solid #007bff;
 }
+.step-container {
+  position: relative;
+}
+
+.custom-tooltip-container {
+  position: relative;
+  display: inline-block;
+}
+
+.custom-tooltip {
+  visibility: hidden;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  border-radius: 4px;
+  padding: 5px;
+  position: absolute;
+  bottom: 150%; /* Adjust tooltip position */
+  left: 50%;
+  transform: translateX(-50%);
+  white-space: nowrap;
+  z-index: 10;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.custom-tooltip-container:hover .custom-tooltip {
+  visibility: visible;
+  opacity: 1;
+}
