--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -580,3 +580,20 @@ svg polygon {
 .bg-fc td:hover {
   background-color: whitesmoke !important;
 }
+.file-link {
+  color: black;
+  text-decoration: none;
+}
+
+.file-link:hover {
+  text-decoration: underline;
+}
+
+.file-icon {
+  color: black;
+  font-size: 1.2rem;
+}
+
+.file-icon:hover {
+  color: #007bff; 
+}
