--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   font-family: "Public Sans", sans-serif;
 }
+
 :root {
   --admin-primary-color: #fff8e9;
   --admin-secondary-color: #8b714a;
@@ -12,6 +13,7 @@
   --admin-background-color: #ad8c5c;
   --admin-text-color: #fff;
 }
+
 .wizard-container {
   max-width: 600px;
   margin: 0 auto;
@@ -32,4 +34,8 @@
   font-size: 16px;
   color: #555;
   margin-bottom: 20px;
+}
+
+.table-headings {
+  color: #a070ff !important;
 }
