--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -593,3 +593,18 @@ svg polygon {
 .file-icon:hover {
   color: #007bff; 
 }
+
+.table-bordered {
+  width: 100%;
+  text-align: center; /* Center align all text by default */
+  border-collapse: collapse; /* Ensure borders collapse for cleaner lines */
+}
+
+.table-bordered th, 
+.table-bordered td {
+  text-align: center; /* Center-align content */
+  vertical-align: middle; /* Vertically align text in the middle */
+  border: 1px solid #a9a9a9; /* Add border styling */
+  padding: 10px; /* Add padding for better spacing */
+  background: none;
+}
